@@ -10,6 +10,8 @@
             Added option to build in TensorFlow Lite for AI
             Documentation for modules now includes require('...') in the call type to be less confusing
             ESP8266: warning: Empty loadable segment detected (fix #1690) 
+            nRF52: Add NRF.nfcPair(...) and OOB pairing to allow tap to pair over BLE
+            nRF52: Add NRF.nfcAndroidApp(...) to launch an Android app on touch
 
      2v04 : Allow \1..\9 escape codes in RegExp
             ESP8266: reading storage is not working for boot from user2 (fix #1507)
